# Sensor-Network-Project

./: .gitignore  README.md  TeamOverview
code/: .gitignore  mycode.tar
code/mycode/: README.md
code/mycode/Influx_MQTT_BRIDGE/mqtt-influx-bridge/: bridge.js  package-lock.json  package.json
code/mycode/MyBleGpsApp/: build.gradle  local.properties  settings.gradle.kts
code/mycode/MyBleGpsApp/app/: build.gradle
code/mycode/basenode/src/: main.c
code/mycode/include/: thingy52_gas_colour.h
code/mycode/mylib/: kalman_filter.c  magnetometer_sensor.c  myconfig.h  pressure_sensor.c  rtc.c  rtc.h  sample.c  sample.h  sampling.c  sltb_sensors.c  sltb_sensors.h  temp_humidity_sensor.c  thingy52_gas_colour.c  thingy52_gas_colour.h  thingy52_sensors.c  thingy52_sensors.h  thunderboard_button.c  thunderboard_button.h  wifi.c
code/mycode/pf/: blockchain.py  heatmap.py
code/mycode/pf/base_node/: CMakeLists.txt  README.md  prj.conf
code/mycode/pf/basenode/: CMakeLists.txt  prj.conf
code/mycode/pf/displaynode/: README.md
code/mycode/pf/m2core/: CMakeLists.txt  README.md  prj.conf  publisher.py
code/mycode/pf/m2coreBLE/: prj.conf  publisher.py
code/mycode/pf/mobilenode/: CMakeLists.txt  README.md  mykey.pem  prj.conf  sysbuild.conf
code/mycode/pf/mobilenode/boards/: thingy52_nrf52832.overlay
code/mycode/pf/mobilenode/src/: main.c  phoneGPS.c
code/mycode/pf/mobilenode/sysbuild/: mcuboot.conf
code/mycode/pf/nodeMobile/: CMakeLists.txt
code/mycode/pf/nodeSensor/: prj.conf
code/mycode/pf/sensornodes/: CMakeLists.txt  README.md  prj.conf
(+15 files in other folders)
